Bug 1802268 part 1: Add AccAttributes::GetMutableAttribute. r=eeejay,nlapre

We will soon have an offsets array in the parent process cache which is not built in one shot.
Instead, we will gradually cache more offsets as they are requested.
To do this, we need a way to get an array from the cache which can be modified in-place.

Differential Revision: https://phabricator.services.mozilla.com/D163417